day4-6a nginx实现反向代理与负载均衡

--- a/w4_VueProject/doc/项目说明.md
+++ b/w4_VueProject/doc/项目说明.md
@@ -10,19 +10,23 @@
 * ...
 
 ## 项目要求
+* 爬取数据到本地数据库
+* 编写数据API
 * 移动端适配
 * 编写项目说明文档README.md
     * 项目名称
     * 演示
         * 官网
         * 上线网址
-        * github仓库
+    * git仓库地址
     * 团队与分工
         * 格式：组长：xxx，成员：xxx,xxx
         * 负责模块说明
+    * 项目页面截图
+    >截有代表性得页面，不少于3张
     * 项目目录说明
-* 编写数据API
-* 爬取数据到本地数据库
+    > tree
+
 
 ## 技术栈
 
@@ -41,13 +45,12 @@
 * MongoDB（推荐）/mySQL
 
 
-## 项目效果
+## 项目完成后所需操作
 * 上线
-* 团队协作
-* git操作
-    * 分支
-    * Organization
-        * Repositories
-            项目名称，组长：xxx，成员：xxx,xxx
-        * Teams
-            组长：xxx，成员：xxx,xxx
+    * 路由改成history模式
+* 发邮件
+    * 项目负责人发邮件给讲师、抄送给就业老师、班主任（邮箱格式：姓名全拼@1000phone.com）
+* 录视频
+    * 每个同学把自己负责得部分录制一个视频交给学委
+* 编写README.md并推送到仓库
+    
